--- a/src/main/themes/petclinic/petclinic.scss
+++ b/src/main/themes/petclinic/petclinic.scss
@@ -47,8 +47,7 @@
   --sidemenu-title-color: var(--sidemenu-text-color);
   --sidemenu-title-background-color: var(--dark-purple);
 
-  --sidemenu-item-focused-color: var(--white);
-
+  --sidemenu-item-focused-color: var(--secondary-dim-color);
   --sidemenu-item-selected-color: var(--secondary-dim-color);
   --sidemenu-item-selected-background-color: none;
 
